adicionando pasta imagens e inserindi imagem ao arquivo index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Perfil #catsoninstagram</h1>
-    <img src="images/nome_da_sua_imagem.jpg" />
+    <img src="./imagens/cat.jpg" />
   </body>
 </html>
